--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json",
-    "build": "tsc",
+    "build": "tsc --esModuleInterop && cp -rf package.json dist/package.json",
     "prestart": "npm run build",
     "start": "ts-node .",
     "test": "npm run test-dev",
