--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json",
     "build": "tsc --esModuleInterop && cp -rf package.json dist/package.json",
-    "test-build": "tsc --noEmit",
+    "test-build": "tsc --noEmit && cp -rf package.json dist/package.json",
     "prestart": "npm run build",
     "start": "ts-node .",
     "test": "npm run test-dev",
