--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json",
-    "build": "tsc --esModuleInterop && cp -rf package.json dist/package.json && cp -rf config dist/config",
+    "build": "tsc && cp -rf package.json dist/package.json && cp -rf config dist/config",
     "test-build": "tsc --noEmit && cp -rf package.json dist/package.json && cp -rf config dist/config",
     "prestart": "npm run build",
     "start": "ts-node .",
