--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "commonjs",
+    "esModuleInterop": true,
     "target": "es6",
     "noImplicitAny": true,
     "sourceMap": true,
