--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/Canterlot-Group/api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "child_process": "^1.0.2",
     "config": "^3.3.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -48,9 +49,11 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
     "@types/sequelize": "^4.28.9",
+    "@types/supertest": "^2.0.10",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.6",
+    "supertest": "^6.0.0",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
     "tslint": "^6.1.3",
