--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
+    "pg": "^8.4.2",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "@types/mocha": "^8.0.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
+    "@types/pg": "^7.14.5",
     "@types/sequelize": "^4.28.9",
     "@types/supertest": "^2.0.10",
     "chai": "^4.2.0",
