--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "morgan": "^1.10.0",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.3.5",
+    "sequelize-typescript": "^1.1.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.14",
     "@types/config": "0.0.36",
@@ -53,6 +56,7 @@
     "@types/pg": "^7.14.5",
     "@types/sequelize": "^4.28.9",
     "@types/supertest": "^2.0.10",
+    "@types/validator": "^13.1.0",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.6",
