--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.5",
-    "sequelize-typescript": "^1.1.0"
+    "sequelize-typescript": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
