--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/Canterlot-Group/api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
     "config": "^3.3.2",
@@ -41,9 +42,11 @@
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.5",
-    "sequelize-typescript": "^2.0.0-beta.0"
+    "sequelize-typescript": "^2.0.0-beta.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.14",
@@ -56,6 +59,7 @@
     "@types/pg": "^7.14.5",
     "@types/sequelize": "^4.28.9",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
