--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prestart": "npm run build",
     "start": "ts-node .",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
-    "test-dev": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register test/**/*.test.ts\""
+    "test-dev": "nodemon --watch . --ext ts --exec \"mocha --exit -r ts-node/register test/**/*.test.ts\""
   },
   "repository": {
     "type": "git",
