Make directory creation optional (skip errors if already exists)

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json",
-    "build": "tsc && mkdir dist && cp -rf package.json dist/package.json && cp -rf config dist/config",
-    "test-build": "tsc --noEmit && mkdir dist && cp -rf package.json dist/package.json && cp -rf config dist/config",
+    "build": "tsc && mkdir dist; cp -rf package.json dist/package.json && cp -rf config dist/config",
+    "test-build": "tsc --noEmit && mkdir dist; cp -rf package.json dist/package.json && cp -rf config dist/config",
     "prestart": "npm run build",
     "start": "ts-node .",
     "test": "mocha --exit -r ts-node/register test/**/*.test.ts",
