--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.3.5",
-    "sequelize-typescript": "^2.0.0-beta.0",
+    "sequelize": "5",
+    "sequelize-typescript": "^1.1.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
