--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.14",
+    "@types/chai-uuid": "^1.0.2",
     "@types/config": "0.0.36",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -62,6 +63,7 @@
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "chai": "^4.2.0",
+    "chai-uuid": "^1.0.6",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.0",
